--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ env:
   - CI_GPG_KEYNAME: HunterCo_OSS
   
 before_install:
-- bash script/prepare.sh
+- bash script/prepare-build.sh
 
 install: 
 - mvn install -P !release -DskipTests=true -Dmaven.javadoc.skip=true -B -V
